# paigram-impact-bot

./: README.md  pyproject.toml
src/paigram_impact_bot/: __init__.py  config.py  harness.py  system_config.py
src/paigram_impact_bot/plugins/: __init__.py  system_help.py  system_rendered_help.py  system_start.py
src/paigram_impact_bot/templates/system_help/: help.html
tests/: test_config.py  test_harness.py  test_system_help.py  test_system_rendered_help.py  test_system_start.py
